# dynasty

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: check.yml  release.yml
assets/Dynasty.app/Contents/: Info.plist
assets/Dynasty.app/Contents/Resources/: dynasty.icns
crates/ngnk/src/: lib.rs
crates/ngnk/src/l/: k.h
scripts/: macos
src/: api.rs  app.rs  config.rs  data.rs  executor.rs  main.rs  message.rs  svg_logos.rs  theme.rs
src/ngnk/: Cargo.toml  build.rs
src/views/: balances.rs  book.rs  dashboard.rs  market.rs  mod.rs  orders.rs  panes.rs  settings.rs  trades.rs  watchlist.rs
src/views/components/: better_btn.rs  input.rs  list.rs  loading.rs  mod.rs  scrollbar.rs  unstyled_btn.rs
src/views/panes/: balances.rs  book.rs  calculator.rs  chart.rs  market.rs  mod.rs  orders.rs  settings.rs  trades.rs  watchlist.rs
src/ws/: book.rs  listener.rs  market.rs  mod.rs  prices.rs  trades.rs  user.rs  util.rs
