[package]
name = "dynasty"
version = "0.1.0"
edition = "2021"
description = "Desktop terminal for cryptocurrency exchanges"

[dependencies]
binance-rs-async = { version = "1.3.2", features = ["wallet_api"] }
chrono = "0.4.31"
futures = "0.3.28"
iced = { version = "0.12.0", features = ["tokio", "debug", "lazy", "svg"] }
iced_futures = "0.12.0"
meval = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dependencies.async-tungstenite]
version = "0.23"
features = ["tokio-rustls-webpki-roots"]

[dependencies.tokio]
version = "1.32.0"
default-features = false
features = ["sync"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[package.metadata.bundle]
name = "Dynasty"
identifier = "io.github.me.dynasty"
icon = ["assets/dynasty.icns"]

