[package]
name = "dynasty"
version = "0.1.0"
edition = "2021"
description = "Desktop terminal for cryptocurrency exchanges"
[package.metadata.bundle]
name = "Dynasty"
identifier = "io.github.me.dynasty"
icon = ["assets/dynasty.icns"]

[dependencies]
binance-rs-async = { version = "1.3.2", default_features = false, features = ["rustls-tls", "wallet_api"] }
chrono = "0.4.31"
futures = "0.3.28"
iced = { version = "0.12.0", features = ["tokio", "debug", "lazy", "svg", "image", "advanced", "canvas"] }
iced_futures = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.32.0", default-features = false, features=["sync"]}
ngnk = { path = "src/ngnk", optional = true }
meval = { version = "0.2.0", optional = true }
plotters = "0.3.5"
plotters-iced = "0.10.0"
phf = "0.11.1"
regex = "1.10.4"
ringbuf = "0.3.3"
ahash = "0.8.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["calculator_meval"]

calculator_k = ["dep:ngnk"]
calculator_meval = ["dep:meval"]

[build-dependencies]
phf_codegen = "0.11.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories-next = "2.0"
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
